# ergup

./: README.md  compile.bat  ergup.er  ergup.py  pyproject.toml  setup.py
.github/workflows/: main.yml  pip.yml
ergup/: __init__.py  ergup.py
